# praxis

./: .containerignore  .gitignore  Cargo.toml  Containerfile  Makefile  README.md  SECURITY.md  clippy.toml  deny.toml
.cargo/: audit.toml  config.toml
.github/workflows/: benchmarks.yaml  codeql.yaml  container.yaml  conventions.yaml  coverage.yml  microbenchmarks.yaml  publish.yaml  publish.yml  pull-request-hygiene.yaml  tests.yaml
benchmarks/benches/: common.rs  condition_eval.rs  config_parsing.rs  filter_pipeline.rs  headers.rs  load_balancer.rs  router_lookup.rs
benchmarks/microbenchmarks/: filter_pipeline.rs
benchmarks/src/: error.rs  lib.rs  proxy.rs  result.rs  runner.rs  scenario.rs
benchmarks/src/tools/: fortio.rs  mod.rs  vegeta.rs
core/: Cargo.toml
core/src/config/: admin.rs  body_limits.rs  bootstrap.rs  branch_chain.rs  chain_ref.rs  default.yaml  filters.rs  insecure_options.rs  listener.rs  mod.rs  route.rs  runtime.rs
core/src/server/: pingora.rs
docs/: architecture.md  benchmarks.md  configuration.md  conventions.md  development.md  extensions.md  features.md  filters.md  tls.md
examples/: README.md
examples/configs/operations/: multi-listener.yaml
examples/configs/payload-processing/: stream-buffer.yaml
examples/configs/protocols/: tcp-consistent-hash.yaml  tcp-least-connections.yaml  tcp-round-robin.yaml
filter/: Cargo.toml
filter/src/: actions.rs  any_filter.rs  compression_config.rs  context.rs  entry.rs  factory.rs  filter.rs  lib.rs  registry.rs  tcp_filter.rs
filter/src/body/: access.rs  buffer.rs  capabilities.rs  mod.rs  mode.rs
filter/src/builtins/: mod.rs
filter/src/condition/: mod.rs  request.rs  (+1 more)
praxis/: Cargo.toml
praxis-core/: Cargo.toml  README.md
praxis-core/src/: errors.rs  lib.rs
praxis-filter/: Cargo.toml  README.md
praxis-filter/src/: actions.rs  any_filter.rs  body.rs  condition.rs  context.rs  entry.rs  factory.rs  filter.rs  lib.rs  registry.rs  tcp_filter.rs
praxis-filter/src/builtins/: mod.rs
praxis-filter/src/builtins/http/: mod.rs
praxis-filter/src/builtins/http/ai/: mod.rs
praxis-filter/src/builtins/http/ai/agentic/: mod.rs
praxis-filter/src/builtins/http/ai/inference/: mod.rs  model_to_header.rs
praxis-filter/src/builtins/http/observability/: access_log.rs  mod.rs  request_id.rs
praxis-filter/src/builtins/http/payload_processing/: json_body_field.rs  mod.rs
praxis-filter/src/builtins/http/security/: forwarded_headers.rs  ip_acl.rs  mod.rs
praxis-filter/src/builtins/http/traffic_management/: mod.rs  router.rs  static_response.rs  timeout.rs
praxis-filter/src/builtins/http/traffic_management/load_balancer/: consistent_hash.rs  least_connections.rs  mod.rs  round_robin.rs
praxis-filter/src/builtins/http/transformation/: header.rs
praxis-filter/src/builtins/tcp/: mod.rs
praxis-filter/src/builtins/tcp/observability/: mod.rs  tcp_access_log.rs
praxis-filter/src/pipeline/: http.rs  mod.rs  tcp.rs
praxis-protocol/: Cargo.toml  README.md
praxis-protocol/src/http/pingora/: context.rs  convert.rs  health.rs  json.rs  listener.rs  mod.rs
praxis-protocol/src/http/pingora/handler/: mod.rs  request_body_filter.rs  request_filter.rs  response_body_filter.rs  response_filter.rs  upstream_peer.rs  upstream_request.rs
praxis-protocol/src/tcp/: mod.rs
praxis/src/: config.rs  lib.rs  main.rs  server.rs  tracing.rs
protocol/: Cargo.toml
protocol/src/: lib.rs  pipelines.rs  tls_setup.rs
server/: Cargo.toml
server/src/: config.rs  health.rs  lib.rs  main.rs  pipelines.rs  server.rs  tracing.rs
tests/config/: Cargo.toml
tests/config/tests/suite/: cluster.rs  cross_cutting.rs  edge_cases.rs  example_utils.rs  filter_chain.rs  listener.rs  main.rs  route.rs  test_utils.rs
tests/config/tests/suite/examples/: api_key_filter.rs  max_body_guard.rs  mod.rs  parse_configs.rs
tests/config/tests/suite/examples/ai/: mod.rs  model_to_header.rs
tests/config/tests/suite/examples/observability/: access_logging.rs  logging.rs  mod.rs
tests/config/tests/suite/examples/operations/: mod.rs  multi_listener.rs
tests/config/tests/suite/examples/payload_processing/: mod.rs  stream_buffer.rs
tests/config/tests/suite/examples/pipeline/: conditional_filters.rs  default_config.rs  mod.rs
tests/config/tests/suite/examples/traffic_management/: basic_reverse_proxy.rs  canary_routing.rs  least_connections.rs  mod.rs  path_based_routing.rs  round_robin.rs  session_affinity.rs  static_response.rs  virtual_hosts.rs  weighted_load_balancing.rs
tests/config/tests/suite/examples/transformation/: header_manipulation.rs  mod.rs
tests/fuzz/: Cargo.toml
tests/integration/: Cargo.toml
tests/utils/: Cargo.toml
tls/: Cargo.toml
tls/src/: cached.rs  client_auth.rs  error.rs  lib.rs  reload.rs  sni.rs  watcher.rs
tls/src/config/: certs.rs  cluster.rs  listener.rs  mod.rs
tls/src/setup/: loader.rs  mod.rs  sni.rs
xtask/: Cargo.toml
xtask/src/: debug.rs  echo.rs  main.rs  port.rs
(+219 files in other folders)
