[package]
name = "praxis-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Protocol implementations for the Praxis proxy"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
pingora-core = { workspace = true }
pingora-http = { workspace = true }
pingora-proxy = { workspace = true }
praxis-core = { workspace = true }
praxis-filter = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
tokio = { workspace = true }
