[package]
name = "praxis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Cloud and AI-native proxy server built on Pingora"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
praxis-core = { workspace = true }
praxis-filter = { workspace = true }
praxis-protocol = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = "0.6.1"

[features]
default = ["ai-agentic", "ai-inference"]
ai-agentic = ["praxis-filter/ai-agentic"]
ai-inference = ["praxis-filter/ai-inference"]

[dev-dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
